# kite

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  PLAN.md  README.md  SECURITY.md  SUPPORT.md  deny.toml  wrangler.jsonc
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/skills/pr-ready/: SKILL.md
.github/workflows/: ci.yml  release.yml  website.yml
docs/: RELEASING.md  SPEC.md
docs/website/: DEPLOY.md  _headers  index.html  style.css  wrangler.jsonc
scripts/: release.ps1
src/: app.rs  main.rs
src/alert/: mod.rs  rules.rs
src/collector/: battery.rs  cpu.rs  disk.rs  docker.rs  gpu.rs  k8s.rs  memory.rs  mod.rs  network.rs  process.rs  remote.rs  sensor.rs
src/config/: keybindings.rs  mod.rs  settings.rs
src/export/: log.rs  mod.rs  prometheus.rs  replay.rs
src/input/: keyboard.rs  mod.rs
src/ui/: dialog.rs  help.rs  layout.rs  menu.rs  mod.rs  theme.rs
src/ui/widgets/: container_box.rs  cpu_box.rs  disk_box.rs  gpu_box.rs  k8s_box.rs  mem_box.rs  mod.rs  net_box.rs  proc_box.rs  remote_box.rs  sensor_box.rs
src/util/: error.rs  mod.rs  ring_buffer.rs  units.rs
