[package]
name = "kite"
version = "1.0.0"
edition = "2024"
description = "A modern cross-platform TUI system resource monitor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kafkade/kite"
homepage = "https://github.com/kafkade/kite"
keywords = ["tui", "system-monitor", "terminal", "dashboard", "rust"]
categories = ["command-line-utilities", "os"]
rust-version = "1.85"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6"
futures = "0.3"
hostname = "0.4"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.33"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
toml = "1.1"
