[package]
name = "kite"
version = "1.1.0"
edition = "2024"
description = "A modern cross-platform TUI system resource monitor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kafkade/kite"
homepage = "https://github.com/kafkade/kite"
keywords = ["tui", "system-monitor", "terminal", "dashboard", "rust"]
categories = ["command-line-utilities", "os"]
rust-version = "1.85"

[features]
default = ["gpu", "battery", "docker"]
gpu = ["dep:nvml-wrapper"]
battery = ["dep:starship-battery"]
docker = ["dep:bollard"]
k8s = ["dep:kube", "dep:k8s-openapi"]
ssh = ["dep:russh", "dep:ssh-key", "dep:async-trait"]
prometheus = ["dep:prometheus-client", "tokio/net", "tokio/io-util"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6"
futures = "0.3"
hostname = "0.4"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.36"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
toml = "1.1"
nvml-wrapper = { version = "0.10", optional = true }
starship-battery = { version = "0.10", optional = true }
bollard = { version = "0.18", optional = true }
kube = { version = "0.98", features = ["client", "config", "rustls-tls"], default-features = false, optional = true }
k8s-openapi = { version = "0.24", features = ["v1_32"], optional = true }
russh = { version = "0.48", optional = true }
ssh-key = { version = "0.6", optional = true }
async-trait = { version = "0.1", optional = true }
prometheus-client = { version = "0.22", optional = true }
serde_json = "1"
flate2 = "1"
